# neural-network-classify

./: README.md  Setup.hs  neural-network-classify.cabal  stack.yaml
src/: Main.hs
