name:                neural-network-classify
version:             0.1.0.0
synopsis:            Classifying points with neural network
description:         Classifying points with neural network
homepage:            https://github.com/qsctr/neural-network-classify
license:             MIT
license-file:        LICENSE
author:              Bretton
maintainer:          brettonchen@gmail.com
copyright:           2017 Bretton
category:            AI
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable neural-network-classify
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       ansi-terminal
                     , base >= 4.7 && < 5
                     , gloss
                     , neural-network
  ghc-options:         -Wall -threaded
